--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <div class="link-container">
     <a class="link" href="https://snapchat.com/t/FwjJpdXQ" target="_blank">👻 Snapchat</a>
     <a class="link" href="https://www.instagram.com/shamsh.agency" target="_blank">📸 Instagram</a>
+    <a class="link" href="https://www.tiktok.com/@shamsagency.sn?_t=ZM-8xaRjoQ2Xm4&_r=1" target="_blank">🎥 TikTok (ShamsAgency.sn)</a>
     <a class="link" href="https://www.tiktok.com/@.shamsland?_t=ZM-8xYcprcmWlZ&_r=1" target="_blank">🎵 TikTok</a>
     <a class="link" href="mailto:shamsagency221@gmail.com">📧 Email</a>
   </div>
