--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       border-radius: 8px;
     }
     h1 {
-      margin-top: 20px; font-size: 24px;
+      margin-top: 20px; font-size: 35px;
       color: #0033A0;
     }
     .link-container {
@@ -51,11 +51,12 @@
 <body>
   <img class="logo" src="logo.png" alt="Logo Shams Agency">
   <h1>📲 Suivez Shams Agency</h1>
+  <h1>Design Print & Visuals </h1>
   <div class="link-container">
+    <a class="link" href="https://wa.me/221768573326?text=Bonjour%20Shams%20Agency%2C%20je%20souhaite%20avoir%20plus%20d'informations." target="_blank">💬 WhatsApp</a>
     <a class="link" href="https://snapchat.com/t/FwjJpdXQ" target="_blank">👻 Snapchat</a>
     <a class="link" href="https://www.instagram.com/shamsh.agency" target="_blank">📸 Instagram</a>
-    <a class="link" href="https://www.tiktok.com/@shamsagency.sn?_t=ZM-8xaRjoQ2Xm4&_r=1" target="_blank">🎥 TikTok (ShamsAgency.sn)</a>
-    <a class="link" href="https://www.tiktok.com/@.shamsland?_t=ZM-8xYcprcmWlZ&_r=1" target="_blank">🎵 TikTok</a>
+    <a class="link" href="https://www.tiktok.com/@shamsagency.sn?_t=ZM-8xaRjoQ2Xm4&_r=1" target="_blank">🎥 TikTok</a>
     <a class="link" href="mailto:shamsagency221@gmail.com">📧 Email</a>
   </div>
   <footer>© Shams Agency - Tous droits réservés</footer>
