--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       border-radius: 8px;
     }
     h1 {
-      margin-top: 20px; font-size: 35px;
+      margin-top: 20px; font-size: 30px;
       color: #0033A0;
     }
     .link-container {
@@ -50,8 +50,9 @@
 </head>
 <body>
   <img class="logo" src="logo.png" alt="Logo Shams Agency">
+  <p style="margin-top: 15px; font-size: 18px; color: #0033A0;">Bienvenue, soleil ☀️</p>
   <h1>📲 Suivez Shams Agency</h1>
-  <h1>Design Print & Visuals </h1>
+  
   <div class="link-container">
     <a class="link" href="https://wa.me/221768573326?text=Bonjour%20Shams%20Agency%2C%20je%20souhaite%20avoir%20plus%20d'informations." target="_blank">💬 WhatsApp</a>
     <a class="link" href="https://snapchat.com/t/FwjJpdXQ" target="_blank">👻 Snapchat</a>
